--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "gulp-clean": "^0.3.2",
     "gulp-connect": "^5.0.0",
     "gulp-jshint": "^2.0.4",
+    "gulp-less": "^3.3.2",
+    "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.4",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch": "^4.3.11"
   },
   "devDependencies": {
     "gulp-jshint": "^2.0.4",
